--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/introspection": "2.1.1"
   },
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "codegen": "graphql-codegen --config codegen.yml"
   }
 }
